--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.0",
+    "react-toastify": "^11.0.2",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
